src/test/ui/consts/qualif_overwrite.stderr
error[E0492]: this borrow to an interior mutable value may end up in the final value of this constant
  --> $DIR/qualif_overwrite.rs:10:5
   |
LL |     &{a}
   |     ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0492`.
